# paddleocr_donut_ocr

./: README.md  pyproject.toml
src/: app.py
